# zero-infra-mod-registry

./: Dockerfile  README.md  action.yml  docker-entrypoint.sh  github-action-entrypoint.sh  pyproject.toml  run.py
.github/workflows/: action-example.yml  add-release-action.yml  auto-update-registry.yml
.github/workflows/scripts/: run-package-manager.sh
src/zero_infra_mod_registry/: __init__.py  __main__.py  main.py
src/zero_infra_mod_registry/models/: __init__.py  mod_metadata.py
src/zero_infra_mod_registry/registry/: __init__.py  filesystem_package_registry.py  package_registry.py
src/zero_infra_mod_registry/retriever/: __init__.py  github_mod_metadata_retriever.py  mod_metadata_retriever.py
src/zero_infra_mod_registry/utils/: __init__.py  package_list.py  path_utils.py  redirect_manager.py
tests/: README.md  conftest.py  test_add_package_to_index.py  test_filesystem_package_registry.py  test_github_mod_metadata_retriever.py  test_package_list.py  test_redirect_manager.py
